Fixing the modified the spacing since the banner bar isn't a fixed top element

--- a/src/css/bootstrap.pallas.css
+++ b/src/css/bootstrap.pallas.css
@@ -46,8 +46,8 @@ span.text-muted {
 }
 
 div.content {
-  padding-top: 5rem !important;
-  padding-bottom: 3rem !important;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
 }
 
 img.content {
